# dev-tool-mcp

./: README.md  README_CN.md  launch_server.sh  pyproject.toml
examples/: README.md  quick_start.py
mcp_server/: mcp_tool.py  server.py  tool_loader.py  utils.py
mcp_server/browser/: README.md  browser_service.py
mcp_server/crawl/: __init__.py  crawl.py
mcp_server/tools/: crawl_web_page_tool.py  echo_message_tool.py  get_console_messages_tool.py  get_network_requests_tool.py  get_page_content_tool.py  say_hello_tool.py
simple_output/20251119-184728/: fit_markdown.md  output.html  output.json  raw_markdown.md
spider_mcp_server/: crawl.py  llm.py  server.py
test/: test_browser.py  test_complete_crawler.py  test_crawler.py  test_litellm_ollama.py
