[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-tool-mcp"
version = "0.1.0"
description = "An MCP tool for web crawling using crawl4ai"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "crawl4ai>=0.7.7",
    "pydantic>=2.0.0",
    "mcp==1.0.0",
    "httpx[socks]",
    "litellm",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "sentencepiece",
    "playwright>=1.40.0",
]

[project.scripts]
dev-tool-mcp = "mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
disableLanguageServices = true
disableTaggedHints = true
reportOptionalSubscript = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportOptionalAssignment = false
reportOptionalParameter = false
reportOptionalReturn = false
reportOptionalAttribute = false
reportOptionalLit = false
reportOptionalIndex = false
reportOptionalDynamicLookup = false
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMissingTypeArgument = false
reportUnknownType = false
reportPrivateImportUsage = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportAssignmentType = false
reportCallIssue = false
reportIndexIssue = false
reportInvalidTypeArguments = false
reportInvalidTypeVarUse = false
reportOperatorIssue = false
reportReturnType = false
reportUndefinedVariable = false
reportUntypedBaseClass = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
reportUnnecessaryCast = false
reportUnsupportedDunderAll = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedImport = false
reportUnusedVariable = false